--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -42,6 +42,9 @@
         tools:replace="android:allowBackup"
         tools:targetApi="31">
         <activity
+            android:name=".presentation.ui.trip.PickupPassengersActivity"
+            android:exported="false" />
+        <activity
             android:name=".presentation.ui.auth.UpdatePasswordActivity"
             android:exported="false" />
         <activity
